added weather app that i just completed

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
                 <div class="project-item">
                     <a href="https://akash301994.github.io/Challenge-1/">
                         <img src="./assets/images/akash301994.github.io_Challenge-1_.png" alt="Project 1">
-                        Project 1
+                        Horiseon Marketing
                     </a>
                 </div>
                 <div class="project-item">
                     <a href="https://allicris.github.io/digital-newspaper/">
                         <img src="./assets/images/allicris.github.io_digital-newspaper_.png" alt="Project 2">
-                        Project 2
+                        Digital Newspaper
                     </a>
                 </div>
                 <div class="project-item">
-                    <a href="https://akash301994.github.io/Challenge-1/">
-                        <img src="./assets/images/akash301994.github.io_Challenge-1_.png" alt="Project 3">
-                        Project 3
+                    <a href="https://akash301994.github.io/weather-app/">
+                        <img src="./assets/images/127.0.0.1_5501_index.html (1).png" alt="Project 3">
+                        Weather App
                     </a>
                 </div>
                 <div class="project-item">
