added project 2 playcare into projects

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     </a>
                 </div>
                 <div class="project-item">
-                    <a href="https://akash301994.github.io/Challenge-1/">
-                        <img src="./assets/images/akash301994.github.io_Challenge-1_.png" alt="Project 4">
-                        Project 4
+                    <a href="https://mysterious-anchorage-56643-889ec0494a37.herokuapp.com/">
+                        <img src="./assets/images/localhost_3001_home.png" alt="Project 4">
+                        Playcare Project-2
                     </a>
                 </div>
                 <div class="project-item">
