--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>Contact Me</h2>
             <nav>
                 <div class="link-box">
-                    <a href="https://github.com/akash301994">GitHub</a>
+                    <a href="https://github.com/akash301994/portfolio">GitHub</a>
                 </div>
                 <div class="link-box">
                     <a href="mailto:patel.akash30@icloud.com">Email</a>
@@ -60,6 +60,14 @@
         <!-- added aside element called projects to keep separate on page. -->
         <aside id="aside">
             <h2 id ="projects">Projects</h2>
+
+            <div class="project-item">
+                <a href="https://akash301994.github.io/weather-app/">
+                    <img src="./assets/images/127.0.0.1_5501_index.html (1).png" alt="Project 3">
+                    Weather App
+                </a>
+            </div>
+       
             <div class="project-grid">
                 <div class="project-item">
                     <a href="https://akash301994.github.io/Challenge-1/">
@@ -99,6 +107,7 @@
                 </div>
             </div>
         </aside>
+        
     </main>     
     <!-- added a footer -->
     <footer>
